<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_head">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_spotify_streamer">spotify streamer</string>
    <string name="btn_scores_app">scores app</string>
    <string name="btn_library_app">library app</string>
    <string name="btn_build_it_bigger">build it bigger</string>
    <string name="btn_xyz_reader">xyz reader</string>
    <string name="btn_capstone">capstone: my own app</string>
</resources>
