<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffd5e5ee">

    <TextView
        android:text="@string/main_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/txt_main_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify_streamer"
        android:id="@+id/btn_spotify_streamer"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_main_header"
        android:capitalize="words"
        android:background="#fff08c35" />

    <Button
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores_app"
        android:id="@+id/btn_scores_app"
        android:layout_marginTop="20dp"
        android:capitalize="words"
        android:layout_below="@+id/btn_spotify_streamer"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35" />

    <Button
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_library_app"
        android:id="@+id/btn_library_app"
        android:layout_marginTop="20dp"
        android:capitalize="words"
        android:layout_below="@+id/btn_scores_app"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35" />

    <Button
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_bigger"
        android:id="@+id/btn_build_it_bigger"
        android:layout_marginTop="20dp"
        android:capitalize="words"
        android:layout_below="@+id/btn_library_app"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35" />

    <Button
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_xyz_reader"
        android:id="@+id/btn_xyz_reader"
        android:layout_marginTop="20dp"
        android:capitalize="words"
        android:layout_below="@+id/btn_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35" />

     <Button
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:id="@+id/btn_capstone"
        android:layout_marginTop="20dp"
        android:capitalize="words"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_centerHorizontal="true"
         android:background="#ffbe002b"
         android:textColor="#ffffffff" />


</RelativeLayout>
